# Systools

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  ONBOARDING.md  Product.md  README.md  install.sh
.github/workflows/: ci.yml  integration.yml  release.yml
crates/systui-actions/: Cargo.toml
crates/systui-actions/src/: cron.rs  docker.rs  engine.rs  lib.rs  process.rs  service.rs
crates/systui-cli/: Cargo.toml
crates/systui-cli/src/: cli.rs  main.rs
crates/systui-collectors/: Cargo.toml
crates/systui-collectors/benches/: log_parse.rs
crates/systui-collectors/fixtures/: anacrontab.txt  cgroup-user-scope.txt  cgroup-v1-service.txt  cgroup-v2-service.txt  cron.d-backup.txt  df-P.txt  docker-compose-ls.txt  docker-inspect.json  docker-ps.json  docker-stats.json  docker-system-df.txt  etc-crontab.txt  getent-ahosts.txt  ip-addr.json  ip-addr.txt  ip-route.json  ip-route.txt  iptables-s.txt  journalctl-json.txt  mongosh-server-status.json  mysql-operational.txt  nft-ruleset.txt  os-release.txt  ping-loss.txt  ping.txt  proc-meminfo.txt  proc-stat-1.txt  proc-stat-2.txt  ps.txt  psql-operational.txt  redis-info.txt  resolv.conf  ss-databases.txt  ss-tan.txt  ss-tulpn.txt  systemctl-db-list-units.txt  systemctl-failed.txt  systemctl-list-units.txt  systemctl-show.txt  systemctl-timers.txt  (+3 more)
crates/systui-collectors/src/: capabilities.rs  connectivity.rs  cron.rs  database.rs  docker.rs  exposure.rs  firewall.rs  health.rs  host.rs  host_report.rs  lib.rs  logs.rs  network.rs  packages.rs  process.rs  service.rs  system.rs  timing.rs
crates/systui-collectors/tests/: integration.rs
crates/systui-core/: Cargo.toml
crates/systui-core/src/: action.rs  audit.rs  collector.rs  command.rs  config.rs  error.rs  finding.rs  fleet.rs  lib.rs  mode.rs  model.rs  transport.rs
crates/systui-report/: Cargo.toml
crates/systui-report/src/: collect.rs  fleet.rs  fleet_report.rs  gather.rs  html.rs  json.rs  lib.rs  markdown.rs  model.rs  util.rs
crates/systui-security/: Cargo.toml
crates/systui-security/fixtures/: auth-failed.txt  openssl-x509-selfsigned.txt  openssl-x509.txt  s_client.txt  sshd_config-hardened.txt  sshd_config-insecure.txt  stat-critical.txt  sudoers.txt  suid-find.txt
crates/systui-security/src/: certs.rs  cron.rs  database.rs  docker.rs  lib.rs  policy.rs  ports.rs  ssh.rs  sudo.rs  system.rs
crates/systui-storage/: Cargo.toml
crates/systui-storage/src/: audit.rs  config.rs  lib.rs  paths.rs  store.rs
crates/systui-testkit/: Cargo.toml
crates/systui-testkit/src/: fuzz.rs  lib.rs
crates/systui-transport/: Cargo.toml
crates/systui-transport/src/: lib.rs  local.rs  mock.rs  ssh.rs
crates/systui-ui/: Cargo.toml
crates/systui-ui/src/: app.rs  cron_builder.rs  data.rs  export.rs  fleet.rs  form.rs  input.rs  lib.rs  theme.rs  ui.rs  visual_style.rs  widgets.rs
demo-env/: README.md  docker-compose.yml  failing-service.sh
docs/: AUDIT-2026-05.md  BACKLOG.md  INSTALL.md  METHODOLOGY.md  ROADMAP.md  SECURITY-REVIEW.md  TESTING.md
docs/interfaz/: SysTUI Ratatui Spec.html
docs/phases/: phase-00-foundation.md  phase-01-v0.1-demo.md  phase-02-v0.2-local-ops.md  phase-03-v0.3-net-security.md  phase-04-v0.4-docker-crons.md  phase-05-v0.5-ssh.md  phase-06-v0.6-reports.md  phase-07-v0.7-databases.md  phase-08-1-v0.8.1-management-ux.md  phase-08-2-v0.8.2-ui-redesign.md  phase-08-3-v0.8.3-optimization.md  phase-08-4-v0.8.4-prototype-data-parity.md  phase-08-v0.8-fleet.md  phase-09-v0.9-policies.md  phase-10-v1.0-release.md  phase-11-v1.1-ui-cockpit.md
packaging/: nfpm.yaml  systui.1
packaging/aur/: PKGBUILD
