[workspace]
resolver = "2"
members = [
    "crates/systui-cli",
    "crates/systui-core",
    "crates/systui-ui",
    "crates/systui-transport",
    "crates/systui-collectors",
    "crates/systui-actions",
    "crates/systui-security",
    "crates/systui-report",
    "crates/systui-storage",
    "crates/systui-testkit",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
authors = ["njuante"]
description = "Fast, agentless TUI for Linux server administration"

[workspace.dependencies]
# Internal crates
systui-core = { path = "crates/systui-core" }
systui-ui = { path = "crates/systui-ui" }
systui-transport = { path = "crates/systui-transport" }
systui-collectors = { path = "crates/systui-collectors" }
systui-actions = { path = "crates/systui-actions" }
systui-security = { path = "crates/systui-security" }
systui-report = { path = "crates/systui-report" }
systui-storage = { path = "crates/systui-storage" }
systui-testkit = { path = "crates/systui-testkit" }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serialization & config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
toml_edit = "0.22"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
directories = "5"

# Errors & logging
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

[profile.release]
strip = true
lto = true
codegen-units = 1
