[package]
name = "systui-actions"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "SysTUI action engine: previews, confirmations, backups and safe execution"

[lints]
workspace = true

[dependencies]
systui-core.workspace = true
async-trait.workspace = true
chrono.workspace = true

[dev-dependencies]
systui-transport.workspace = true
tokio.workspace = true
