[package]
name = "systui-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "SysTUI command-line entry point and binary"

[[bin]]
name = "systui"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
systui-core.workspace = true
systui-storage.workspace = true
systui-ui.workspace = true
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
