[package]
name = "systui-collectors"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "SysTUI collectors: system, process, service, log and network readers"

[lints]
workspace = true

[features]
# Opt-in integration tests that run the real collectors over LocalTransport/SshTransport
# against the host. Off by default so `cargo test --workspace` stays hermetic; the CI
# distro matrix and the systemd/ssh job enable it explicitly.
integration = []

[dependencies]
systui-core.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
systui-transport.workspace = true
systui-core.workspace = true
tokio.workspace = true
