[package]
name = "systui-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "SysTUI core: models, errors, configuration and shared contracts"

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
async-trait.workspace = true

[dev-dependencies]
toml.workspace = true
serde_json.workspace = true
