[package]
name = "systui-report"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "SysTUI report generation in JSON, Markdown and HTML"

[lints]
workspace = true

[dependencies]
systui-core.workspace = true
systui-collectors.workspace = true
systui-security.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
systui-transport.workspace = true
tokio.workspace = true
