[package]
name = "systui-security"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "SysTUI security posture checks and evidence-based findings"

[lints]
workspace = true

[dependencies]
systui-core.workspace = true
systui-collectors.workspace = true
async-trait.workspace = true
serde.workspace = true
tokio.workspace = true

[dev-dependencies]
systui-transport.workspace = true
