[package]
name = "systui-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "SysTUI local storage: config, profiles, cache and audit log"

[lints]
workspace = true

[dependencies]
systui-core.workspace = true
directories.workspace = true
toml.workspace = true
toml_edit.workspace = true
serde_json.workspace = true
