[package]
name = "systui-ui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "SysTUI terminal UI: ratatui components, navigation and app state"

[lints]
workspace = true

[dependencies]
systui-core.workspace = true
systui-collectors.workspace = true
systui-actions.workspace = true
systui-storage.workspace = true
ratatui.workspace = true
tokio.workspace = true
regex.workspace = true

[dev-dependencies]
systui-transport.workspace = true
